apps/grafana/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: grafana-tls
